--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
   "author": "alena",
   "license": "ISC",
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browser-sync": "^2.18.13",
-    "browserify": "^14.4.0",
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-image": "^4.0.0",
-    "gulp-less": "^3.3.2",
-    "gulp-pug": "^3.3.0",
-    "gulp-rename": "^1.2.2",
-    "vinyl-source-stream": "^1.1.0"
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babelify": "^10.0.0",
+    "browser-sync": "^2.26.13",
+    "browserify": "^17.0.0",
+    "del": "^6.0.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-image": "^6.2.1",
+    "gulp-less": "^4.0.1",
+    "gulp-pug": "^4.0.1",
+    "gulp-rename": "^2.0.0",
+    "vinyl-fs": "^3.0.0"
+  },
+  "dependencies": {
+    "gulp-cli": "^2.3.0"
   }
 }
