--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "browser-sync": "^2.26.13",
     "browserify": "^17.0.0",
     "del": "^6.0.0",
+    "eslint": "^7.16.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-cssnano": "^2.1.3",
+    "gulp-eslint": "^6.0.0",
     "gulp-image": "^6.2.1",
     "gulp-less": "^4.0.1",
     "gulp-pug": "^4.0.1",
@@ -25,6 +29,7 @@
     "vinyl-fs": "^3.0.0"
   },
   "dependencies": {
-    "gulp-cli": "^2.3.0"
+    "gulp-cli": "^2.3.0",
+    "jquery": "^3.5.1"
   }
 }
